--- a/flyer/index.html
+++ b/flyer/index.html
@@ -21,31 +21,21 @@
 
 <body>
 
-  <a-scene
-    xrweb="disableWorldTracking: true"
-    xrextras-gesture-detector
-    xrextras-almost-there
-    xrextras-loading
+  <a-scene xrweb="disableWorldTracking: true" xrextras-gesture-detector xrextras-almost-there xrextras-loading
     xrextras-runtime-error>
 
     <a-assets>
       <!-- Credit to Poly by Google for the model: https://poly.google.com/view/dA5osnS0Rzj -->
       <a-asset-item id="jelly-glb" src="jellyfish-model.glb"></a-asset-item>
+
+      <a-asset-item id="danceguy" src="danceguy.glb"></a-asset-item>
+
       <img id="jelly-thumb" src="targets/video-target.jpg">
-      <video
-        id="jelly-video"
-        autoplay
-        muted
-        crossorigin="anonymous"
-        loop="true"
-        src="jellyfish-video.mp4">
+      <video id="jelly-video" autoplay muted crossorigin="anonymous" loop="true" src="jellyfish-video.mp4">
       </video>
     </a-assets>
 
-    <a-camera
-      position="0 4 10"
-      raycaster="objects: .cantap"
-      cursor="fuse: false; rayOrigin: mouse;">
+    <a-camera position="0 4 10" raycaster="objects: .cantap" cursor="fuse: false; rayOrigin: mouse;">
     </a-camera>
 
     <a-light type="directional" intensity="0.5" position="1 1 1"></a-light>
@@ -53,8 +43,7 @@
     <a-light type="ambient" intensity="1"></a-light>
 
     <!-- Note: "name:" must be set to the name of the image target uploaded to the 8th Wall Console -->
-    <a-entity
-      xrextras-named-image-target="name: video-target"
+    <a-entity xrextras-named-image-target="name: video-target"
       xrextras-play-video="video: #jelly-video; thumb: #jelly-thumb; canstop: true"
       geometry="primitive: plane; height: 1; width: 0.79;">
     </a-entity>
@@ -65,7 +54,14 @@
       <a-entity xrextras-one-finger-rotate gltf-model="#jelly-glb"></a-entity>
     </a-entity>
 
+    <!-- Note: "name:" must be set to the name of the image target uploaded to the 8th Wall Console -->
+    <a-entity xrextras-named-image-target="name: tp">
+      <!-- Add a child entity that can be rotated independently of the image target. -->
+      <a-entity xrextras-one-finger-rotate gltf-model="#danceguy"></a-entity>
+    </a-entity>
+
   </a-scene>
 
 </body>
+
 </html>
