--- a/flyer/index.html
+++ b/flyer/index.html
@@ -57,7 +57,7 @@
     <!-- Note: "name:" must be set to the name of the image target uploaded to the 8th Wall Console -->
     <a-entity xrextras-named-image-target="name: tp">
       <!-- Add a child entity that can be rotated independently of the image target. -->
-      <a-entity xrextras-one-finger-rotate gltf-model="#unicorn" position="0 -2 0" scale="0.01 0.01 0.01"></a-entity>
+      <a-entity xrextras-one-finger-rotate gltf-model="#unicorn" scale="0.01 0.01 0.01"></a-entity>
     </a-entity>
 
   </a-scene>
