--- a/flyer/index.html
+++ b/flyer/index.html
@@ -28,7 +28,7 @@
       <!-- Credit to Poly by Google for the model: https://poly.google.com/view/dA5osnS0Rzj -->
       <a-asset-item id="jelly-glb" src="jellyfish-model.glb"></a-asset-item>
 
-      <a-asset-item id="unicorn" src="unicorn.glb"></a-asset-item>
+      <a-asset-item id="danceguy" src="unicorn.glb"></a-asset-item>
 
       <img id="jelly-thumb" src="targets/video-target.jpg">
       <video id="jelly-video" autoplay muted crossorigin="anonymous" loop="true" src="jellyfish-video.mp4">
@@ -57,7 +57,7 @@
     <!-- Note: "name:" must be set to the name of the image target uploaded to the 8th Wall Console -->
     <a-entity xrextras-named-image-target="name: tp">
       <!-- Add a child entity that can be rotated independently of the image target. -->
-      <a-entity xrextras-one-finger-rotate gltf-model="#unicorn" scale="0.01 0.01 0.01"></a-entity>
+      <a-entity xrextras-one-finger-rotate gltf-model="#danceguy" scale="0.05 0..5 0..5"></a-entity>
     </a-entity>
 
   </a-scene>
